# RustDroid

./: .gitignore  .npmrc  Cargo.toml  LICENSE  index.html  package-lock.json  package.json  spawn_test.rs  vite.config.ts
crates/ide-core/: Cargo.toml
crates/ide-core/src/: document.rs  lib.rs  position.rs  range.rs  uri.rs
crates/ide-editor/: Cargo.toml
crates/ide-editor/src/: document_model.rs  lib.rs
crates/ide-ipc/: Cargo.toml
crates/ide-ipc/src/: app.rs  event.rs  lib.rs
dev-docs/android-ide-dev-plan/: android-ide-dev-plan.html
dev-docs/android-ide-dev-plan/assets/: charts.js
dev-docs/android-ide-rust-feasibility/: android-ide-rust-feasibility.html
dev-docs/android-ide-rust-feasibility/assets/: charts.js
dev-docs/android-ide-tech-stack/: android-ide-tech-stack.html
dev-docs/android-ide-tech-stack/assets/: charts.js
dev-docs/ui-prototype/: README.md  ui-prototype.html
docs/superpowers/plans/: 2026-06-28-sprint-1-2-file-system.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs.rs  lib.rs  main.rs  project.rs  settings.rs  terminal.rs  watcher.rs
src/api/: app.ts  fs.ts  settings.ts
src/components/: AboutPage.css  AboutPage.tsx  BottomPanel.css  BottomPanel.tsx  ContextMenu.tsx  Editor.css  EditorTabs.css  EditorTabs.tsx  FileTree.css  FileTree.tsx  FileTreeItem.tsx  MonacoEditor.tsx  OutputTab.tsx  ProblemsTab.tsx  RecentProjects.tsx  SettingsPage.css  SettingsPage.tsx  TerminalTab.tsx  tokyo-night-theme.ts
src/store/: appStore.ts  fileStore.ts  settingsStore.ts
src/styles/: global.css
src/types/: fs.ts
