[workspace]
resolver = "2"
# Sprint 1-1：仅创建基础层 + 应用入口
# 后续 Sprint 按计划追加：ide-editor(1-3) / ide-lsp(2-1) / ide-project(3-4)
# / ide-build(3-1) / ide-device(3-2) / ide-preview(4-1) / ide-debug(4-2)
members = [
    "crates/ide-core",
    "crates/ide-ipc",
    "crates/ide-editor",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RustDroid Contributors"]
repository = "https://github.com/rustdroid/rustdroid-ide"

[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 异步
tokio = { version = "1.40", features = ["full"] }
# Tauri
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0" }
tauri-plugin = { version = "2.0" }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
# 内部 crate
ide-core = { path = "crates/ide-core" }
ide-ipc = { path = "crates/ide-ipc" }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
