[package]
name = "rustdroid-ide"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RustDroid IDE — lightweight Android IDE built with Rust + Tauri"

[lib]
name = "rustdroid_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ide-core = { workspace = true }
ide-ipc = { workspace = true }
