[package]
name = "ide-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RustDroid IDE — document model (ropey-based text buffer)"

[dependencies]
ropey = "1.6"
serde = { workspace = true }
serde_json = { workspace = true }
ide-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
